infrastructure-as-code/kubernetes/applications/jackett/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:0.22.362
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-pvc
