infrastructure-as-code/kubernetes/applications/jackett/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: applications
spec:
  ports:
    - port: 9117
      targetPort: 9117
      protocol: TCP
      name: http
  selector:
    app: jackett
